# Multiattribute_similarity_join

./: .gitignore  5、计算机学院本科毕业设计(论文)规范化要求.doc  6、论文格式模板   201X网络本科毕设《本科毕业设计论文样本》---姓名XXX V1.2.doc  CMakeCache.txt  CMakeLists.txt  README  README.md  cmake_install.cmake  diffs  inverted.txt  join_tree_exp.py  makefile  result  run.sh  run_exp.py  runexp.py  search_exp.py  similarity_table_join  similarity_table_search  stat_file.csv  test_sim_table
dataset/: createTable.py  dataGenerator.py  dblp.query  dblp_1k.table  dblp_query_1k  dblp_query_generator.py  dblp_threshold_lowerbound  generateSubset.py  imdb_query_generator.py  imdb_threshold_lowerbound  mapping_rule  query_generator.py  rand.py  ref.table  ref1.table  rule_threshold_lowerbound  showTables.py  xml2mysql.py  xmlParser.py
dataset/imdb/: my_get_movie.py
exp_results/: dblp_stat  dblp_time  format_order_dblp  formated_imdb_order  imdb1_stat  imdb_stat  join_dblp  join_imdb  order_dblp
gtest-1.6.0/make/: .Makefile.swp  Makefile  sample1_unittest  sample2_unittest
lib/gflags/: Makefile  cmake_install.cmake  gflags-targets.cmake
src/: Index.cc  Index.h  common.cc  common.h  core.cc  core.h  filter.cc  filter.h  sim_table.cc  sim_table.h
src/Index/: Index.h
src/exp/: Search0_NoEstimate.cc  Search1_Estimate.cc  Search2_TuneEstimate.cc
src/index/: index.cc  index.h
src/lib/: debugutils.cpp  debugutils.h
src/prefix_index/: prefix_index.cc  prefix_index.h
src/test/: filter_test  filter_test.cc  help_text.cc  help_text.h  sim_table_join.cc  test_sim_table.cc  (+1 more)
test/: filter_test.cc  test_sim_table.cc
(+21 files in other folders)
